# interphase

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
Interphase/: __init__.py  addons.py  interphase.py  module.py
Interphase/test/: main.py
types/: type.d.ts
